	  architectures to signed decimal; the hex values were not sign extending
	  appropriate in most uses (reported by Lorenz Meier).
	* arch/arm/src/stm32/chip/stm32f103/7vc_pinmap:  Fix typographical error in
	  two pinmap definition files.
	* lib/net/lib_inetntoa.c:  Fix typographical error that cause compilation
	  failure on platforms that do not support passing of structures as
	  parameters.
	* arch/arm/*/lpc43xx and configs/lpc4330-xplorer and code complete and
	  ready for testing.  Hopefully, verified LPC43xx support will appear
	  in NuttX-6.20.
	* include/nuttx/stdarg.h:  If CONFIG_ARCH_STDARG_H=y is defined, the top-level
	  makefile will copy the generic (GCC-only) stdarg.h header file from
	  include/nuttx/stdarg.h to include/stdarg.h.  So for the architectures
	  that cannot use their GCC toolchain's stdarg.h file, they can use this
	  alternative by defining CONFIG_ARCH_STDARG_H=y.  If CONFIG_ARCH_STDARG_H,
	  is not defined, then the redirecting stdarg.h header file will stay
	  out-of-the-way in include/nuttx/.
	* configs/lpc4330-xplorer/nsh:  Add an NSH configuration for the LPC4330
	  Xplorer board.

6.21 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* configs/lpc4330-xplorer/up_nsh.c:  Add support for a basic SPIFI block
	  driver for use by NSH.  Does not work!  Crashes on first SPIFI write.
	* configs/stm3220g-eval/include/board.h and configs/stm3240g-eval/include/board.h:
	  The SDIOCLK frequency in the F2 and F4 derives for PLL48CLK and not HCLK
	  so that the SDIOCLK input frequency should always be 48MHz.
	* sched/os_internal.h, sched_setupidlefiles.c, sched_setuptaskfiles.c, and
	  sched_setupidlefiles.c:  Detangle some conditional compilation.  Allow for
	  a perverse configuration that has socket descriptors and streams but no file
	  descriptors (sure, why not?).
	* sched/: Stylistic clean-up of all files.  Some of these files are pretty old
	  and do not follow current NuttX coding standards in detail.