@@ -488,7 +488,6 @@ CONFIG_PM_BUTTONS_NAME4="DOWN"
 CONFIG_PM_BUTTONS_NAME5="LEFT"
 CONFIG_PM_BUTTONS_NAME6="RIGHT"
 CONFIG_PM_BUTTONS_NAME7="UP"
-CONFIG_PM_BUTTONS=1
 
 #
 # Settings for NXFLAT
